@@ -11,6 +11,7 @@ Data Changes:
 - Vocal Expansion can now properly only be taken at Betaware, Deltaware, or Gammaware grades and now properly adds conditional limit modifiers. Existing characters with this bioware will need to reapply improvements to get these bonuses.
 - Internal Synthlink now doubles the cost of the instrument into which it is taken instead of adding double the cost to the instrument. This is based on the way Internal Smartgun's cost is described in the core rulebook.
 - Fixed the Unrestricted Kill Code Qualities customdata not working correctly to allow non-technomancers taking the qualities.
+- Added missing Corps Cadavre entries. Fixes #4975.
 
 Changed/New Strings:
 - LimitCondition_SkillsActiveLeadership
